[tool.poetry]
name = "flask_CRUD"
version = "0.0.1"
description = "first API using Flask"
authors = ["Abdiel <https://github.com/abdielmartins>"]
license = "None"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
